...
              child: Center(
                child: Image.asset("assets/images/start1.png"),
              ),
            ),
            Container(
              child: GestureDetector(
                key: ValueKey("getstarted"),
                onTap: () {
                  FlutterSecureStorage().write(key: 'firstRun', value: "no");
                  Navigator.pushReplacement(context,
                      MaterialPageRoute(builder: (context) => LoginScreen()));
                },
                child: Container(
...
