...
                      decoration: BoxDecoration(
                          color: Color(0xff13293d),
                          borderRadius: BorderRadius.circular(5)),
                      child: Material(
                        color: Colors.transparent,
                        child: InkWell(
                          key: Key("edituser"),
                          onTap: () {
                            Navigator.push(
                                context,
                                MaterialPageRoute(
                                    builder: (context) => EditUserDetails()));
                          },
...
